# dicom-converter

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CODEOWNERS  README.md  installDCMTK.sh
cmake/dcmtk/: DCMTKConfig.cmake  FindDCMTK.cmake
cmake/sdl2/: FindSDL2_ttf.cmake
src/: Renderer.cpp  Renderer.h  controller.cpp  controller.h  dicom.cpp  dicom.h  dicomobj.cpp  dicomobj.h  dicomobject.cpp  dicomobject.h  dicomreader.cpp  dicomreader.h  main.cpp  renderer.cpp  renderer.h  userinput.cpp  userinput.h
utils/: build-dicom-converter.sh  c_cpp_properties.json
